syntax = "proto3";

option csharp_namespace = "Resume.Grpc.Protos.Football";

package footballMatchProtoServicesProtoPackage;

service FootballMatchProtoServicesProto{
	rpc RequestMatchesForTeam (ProtoMessageRequestMatches) returns (ProtoMessageResponseResultOfListOfLiveMatchViewModel);
}

message ProtoMessageRequestMatches{
	string teamId = 1;
}

message ProtoMessageResult{
	bool succeeded = 1;
	repeated string messages = 2;
}

message ProtoMessageLiveMatchViewModel{
	string MatchId = 1;
	string HomeTeamName = 2;
	string HomeTeamLogo = 3;
	string AwayTeamName = 4;
	string AwayTeamLogo = 5;
	int32 GoalsHomeTeam = 6;
	int32 GoalsAwayTeam = 7;
	int32 PenaltiesScoredHomeTeam = 8;
	int32 PenaltiesScoredAwayTeam = 9;
	string MatchStatus = 10;
	string Minute = 11;
	string StartTime = 12;
}

message ProtoMessageResponseResultOfListOfLiveMatchViewModel{
	ProtoMessageResult result = 1;
	repeated ProtoMessageLiveMatchViewModel listOfLiveMatchViewModel = 2;
}

